init(client): next.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gandan",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "workspaces": [
     "apps/*",
@@ -17,14 +17,14 @@
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-custom": "*",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "latest",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.8.3",
     "turbo": "latest",
     "typescript": "^4.9.5"
   },
