--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@gandan/tsconfig",
-  "version": "0.0.0",
+  "name": "@gandan/ts-config",
+  "version": "0.1.0",
   "private": true,
   "files": [
     "base.json"
