--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
       { "restrictDefaultExports": { "defaultFrom": false } }
     ],
     "import/no-extraneous-dependencies": 0,
+    "no-underscore-dangle": 0,
     // react
     "import/no-unresolved": 0,
     "react/react-in-jsx-scope": 0,
