--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,15 @@
     ],
     "import/no-extraneous-dependencies": 0,
     "no-underscore-dangle": 0,
+    "no-use-before-define": [
+      "error",
+      {
+        "functions": true,
+        "classes": true,
+        "variables": false,
+        "allowNamedExports": false
+      }
+    ],
     // react
     "import/no-unresolved": 0,
     "react/react-in-jsx-scope": 0,
