--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       2,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
     ],
+    "react/require-default-props": 0,
     // emotion
     "react/no-unknown-property": ["error", { "ignore": ["css"] }]
   },
