feat(client): 기존 로그인 버튼을 kakao, google 리소스로 변경합니다

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "@svgs/*": ["./assets/svgs/*"],
+      "@images/*": ["./assets/images/*"]
     },
     "jsx": "preserve",
     "jsxImportSource": "@emotion/react"
