fix(client): page component를 views로 관리합니다

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "~/*": ["./*"],
       "@svgs/*": ["./assets/svgs/*"],
-      "@images/*": ["./assets/images/*"]
+      "@images/*": ["./assets/images/*"],
+      "@views/*": ["./components/views/*"]
     },
     "jsx": "preserve",
     "jsxImportSource": "@emotion/react"
