--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,18 +12,22 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
+    "js-cookie": "^3.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@gandan/ts-config": "*"
+    "@gandan/ts-config": "*",
+    "@types/js-cookie": "^3.0.2"
   }
 }
