--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
