feat(cilent): 로그인 성공 시 jwt token을 발급합니다

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@gandan/ts-config": "*",
-    "@types/js-cookie": "^3.0.2"
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.1"
   }
 }
