--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,8 +20,8 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
+    "jose": "^4.11.2",
     "js-cookie": "^3.0.1",
-    "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@gandan/ts-config": "*",
-    "@types/js-cookie": "^3.0.2",
-    "@types/jsonwebtoken": "^9.0.1"
+    "@types/js-cookie": "^3.0.2"
   }
 }
