fix(client): github workflow에 인증을 구성합니다

--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -28,3 +28,4 @@ jobs:
         run: |
           curl --request POST \
           --url 'https://gandan-news.vercel.app/api/cron' \
+          --header 'Authorization: ${{ secrets.CRON_NEWS_TOKEN }}'
