--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,7 +2,8 @@ name: news
 
 on:
   schedule:
-    - cron: '0 21 * * *' # 매일 6시
+    # - cron: '0 21 * * *' # 매일 6시
+    - cron: '*/10 * * * *' # test 10분마다
 
 jobs:
   api-call:
