--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -2,8 +2,7 @@ name: news
 
 on:
   schedule:
-    # - cron: '0 21 * * *' # 매일 6시
-    - cron: '*/10 * * * *' # test 10분마다
+    - cron: '0 21 * * *' # 매일 6시
 
 jobs:
   api-call:
