feat(client): validate github actions를 구성합니다

--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -25,7 +25,27 @@ jobs:
         run: yarn
 
       - name: Call Api
+        id: post-news
         run: |
-          curl --request POST \
+          RESPONSE=$(curl --request POST \
           --url 'https://gandan-news.vercel.app/api/cron' \
-          --header 'Authorization: ${{ secrets.CRON_NEWS_TOKEN }}'
+          --header 'Authorization: ${{ secrets.CRON_NEWS_TOKEN }}')
+          echo "::set-output name=response::$RESPONSE"
+
+      - name: Get news id
+        id: parse-json
+        run: |
+          ID=$(echo "${{ steps.post-news.outputs.response }}" | jq -r '.id')
+          echo "::set-output name=id::$ID"
+
+      - name: Call Revalidate detail
+        id: revalidate detail
+        run: |
+          curl --request GET \
+          --url 'https://gandan-news.vercel.app/api/revalidate?secret=${{ secrets.REVALIDATE_SECRET }}&url=${{ steps.parse-json.outputs.id }}'
+
+      - name: Call Revalidate main
+        id: revalidate main
+        run: |
+          curl --request GET \
+          --url 'https://gandan-news.vercel.app/api/revalidate?secret=${{ secrets.REVALIDATE_SECRET }}&url=/'
