--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -3,7 +3,7 @@ name: news
 on:
   schedule:
     # - cron: '0 21 * * *' # 매일 6시
-    - cron: '20 * * * *' # test
+    - cron: '*/5 * * * *' # test
 
 jobs:
   api-call:
