--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,13 +31,13 @@ jobs:
           RESPONSE=$(curl --request POST \
           --url 'https://gandan-news.vercel.app/api/cron' \
           --header 'Authorization: ${{ secrets.CRON_NEWS_TOKEN }}')
-          echo "{response}={$RESPONSE}" >> $GITHUB_OUTPUT
+          echo "response={$RESPONSE}" >> $GITHUB_OUTPUT
 
       - name: Get news id
         id: parse-json
         run: |
           ID=$(echo '${{ steps.post-news.outputs.response }}' | jq -r '.id')
-          echo "{id}={$ID}" >> $GITHUB_OUTPUT
+          echo "id={$ID}" >> $GITHUB_OUTPUT
 
       - name: Call Revalidate detail
         id: revalidate-detail
