--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -24,6 +24,7 @@
     "jose": "^4.11.2",
     "js-cookie": "^3.0.1",
     "next": "13.1.6",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss-to-json": "^2.1.1",
