fix(client): 앱 이름을 변경합니다

--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "GANDAN NEWS",
-  "short_name": "GN",
+  "short_name": "간단한 뉴스",
   "icons": [
     {
       "src": "icons/android-chrome-192x192.png",
