--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -1,17 +1,43 @@
 {
-  "name": "GANDAN NEWS",
+  "name": "간단한 뉴스",
   "short_name": "간단한 뉴스",
   "icons": [
     {
-      "src": "icons/android-chrome-192x192.png",
-      "sizes": "192x192",
+      "src": "iconts/android-icon-36x36.png",
+      "sizes": "36x36",
       "type": "image/png",
-      "purpose": "any maskable"
+      "density": "0.75"
     },
     {
-      "src": "icons/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "iconts/android-icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": "1.0"
+    },
+    {
+      "src": "iconts/android-icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "density": "1.5"
+    },
+    {
+      "src": "iconts/android-icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "density": "2.0"
+    },
+    {
+      "src": "iconts/android-icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": "3.0"
+    },
+    {
+      "src": "iconts/android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": "4.0",
+      "purpose": "any maskable"
     }
   ],
   "theme_color": "#ffffff",
