feat(client): 뉴스 알람 기능을 구현합니다

--- a/.github/workflows/news.yml
+++ b/.github/workflows/news.yml
@@ -37,3 +37,9 @@ jobs:
         run: |
           curl --request POST \
           --url 'https://gandan-news.vercel.app/api/revalidate?secret=${{ secrets.REVALIDATE_SECRET }}&url=/'
+
+      - name: Notification
+        id: notification
+        run: |
+          curl --request POST \
+          --url 'https://gandan-news.vercel.app/api/pwa/notification?secret=${{ secrets.NOTIFICATION_SECRET }}'
