--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/web-push": "^3.3.2",
     "axios": "^1.3.2",
     "babel-loader": "^9.1.2",
     "dayjs": "^1.11.7",
@@ -30,7 +31,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rss-to-json": "^2.1.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "web-push": "^3.5.0"
   },
   "devDependencies": {
     "@gandan/ts-config": "*",
