chore(client): badge icon을 수정합니다

--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -101,8 +101,8 @@
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
